create page about-bookcrossing

--- a/src/app/about-bookcrossing/about-bookcrossing.component.html
+++ b/src/app/about-bookcrossing/about-bookcrossing.component.html
@@ -1,1 +1,45 @@
-<p>about-bookcrossing works!</p>
+<div id="cms">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center align-content-center">
+        <h1 class="section-heading text-center"><b>BOOKCROSSING</b> -  WHAT IS THIS?</h1>
+        <hr class="primary">
+      </div>
+    </div>
+    <div class="row content">
+      <div class="col-md-12">
+        <p class="content-paragraph">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; An unusual phenomenon aimed at uniting reading enthusiasts.
+        </p>
+        <p class="content-paragraph">
+          Bookcrossing is an unconventional form of popularizing books and reading by transferring them free of charge using the "pass it on" method. The idea of a circulating book was born in the United States in 2001, its initiator was a computer programmer Ron Hornbaker. He called his idea bookcrossing.
+        <p class="content-paragraph">
+        Bookcrossing consists in leaving books read in public places, as well as on specially designated shelves (tables, shelves, showcases, open-air libraries) so that the finder can read them and circulate them again. These activities are aimed at creating a kind of global library by the readers, without any institutional framework, fees or library cards.
+        </p>
+        <p class="content-paragraph">
+          <strong>„Make books free, share with others”</strong>
+        </p>
+        <p class="content-paragraph">
+          The idea of bookcrossing is based on the assumption that literature should be disseminated. Books should travel from hand to hand so that they can live and fulfill their task. The important thing in this journey is that they are simply read. They are not decorations on shelves, they become generally available. So - they live because they teach us, entertain us and surprise us.
+        </p>
+        <p class="content-paragraph">
+          <strong>How to release a book?</strong>
+        </p>
+        <p class="content-paragraph">
+          Register the book on the website, enter it in the database. Follow the instructions. Your publication will be given a unique number that will facilitate identification and allow you to track its subsequent journey. It is not troublesome or complicated to enter the next steps of the book's journey, so anyone can spend a minute on it - and give real satisfaction to the person who released the volume. In this simple way, we can discover with surprise that our book has left the city, province and perhaps it has gone abroad.
+        </p>
+        <p class="content-paragraph">
+          <strong>What bookcrossing gives us?</strong>
+        </p>
+        <p class="content-paragraph">
+          Bookcrossing allows you to share books, makes it possible to exchange them for others, gives a chance to read to those who cannot afford to buy books, makes books in constant circulation, allows you to follow the journey of books, because thanks to the online monitoring system it makes it possible to observe the path of the released volume. <br/>
+
+          Bookcrossing is a disinterested pleasure in sharing literature, building relationships between readers, and an effective way of integration. <br/>
+        </p>
+        <p class="content-paragraph" style="font-size: 20px">
+          <b>The potential of bookcrossing is enormous, we must use it wisely!</b>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
