--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -9,7 +9,7 @@
       <td>
         <mat-form-field appearance="fill">
           <mat-label>Enter your names</mat-label>
-          <input matInput type="text" formControlName="name" required> <!-- [errorStateMatcher]="matcher" -->
+          <input matInput type="text" formControlName="name" required>
           <mat-error *ngIf="this.form.get('email').hasError('required')">
             Your names are <strong>required</strong>
           </mat-error>
@@ -61,7 +61,8 @@
     <tr>
       <td></td>
       <td>
-        <button mat-raised-button color="accent" (click)="onSubmit()"> Submit </button></td>
+        <button mat-raised-button color="accent" (click)="onSubmit()"> Submit </button>
+      </td>
     </tr>
   </table>
 </form>
