--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -58,8 +58,7 @@
               </div>
             </div>
             <div class="submit-button">
-              <button mat-raised-button color="accent" routerLink="/account/register" class="button-styles"> REGISTER
-                NOW
+              <button mat-raised-button color="accent" routerLink="/account/register" class="button-styles"> REGISTER NOW
               </button>
             </div>
           </div>
@@ -68,37 +67,3 @@
     </mat-card>
   </div>
 </div>
-
-
-<!--<div *ngIf="isLoggedIn; else loggedOut">-->
-<!--  Logged in as {{roles}}.-->
-<!--</div>-->
-
-<!--<div class="card">-->
-<!--  <h4 class="card-header">Login</h4>-->
-<!--  <div class="card-body">-->
-<!--    <form [formGroup]="form" (ngSubmit)="login()">-->
-<!--      <div class="form-group">-->
-<!--        <label for="username">Username</label>-->
-<!--        <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />-->
-<!--        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">-->
-<!--          <div *ngIf="f.username.errors.required">Username is required</div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="form-group">-->
-<!--        <label for="password">Password</label>-->
-<!--        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />-->
-<!--        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">-->
-<!--          <div *ngIf="f.password.errors.required">Password is required</div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="form-group">-->
-<!--        <button [disabled]="loading" class="btn btn-primary">-->
-<!--          <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>-->
-<!--          Login-->
-<!--        </button>-->
-<!--        <a routerLink="../register" class="btn btn-link">Register</a>-->
-<!--      </div>-->
-<!--    </form>-->
-<!--  </div>-->
-<!--</div>-->
