--- a/src/app/books/books-list/books-list.component.css
+++ b/src/app/books/books-list/books-list.component.css
@@ -1,8 +1,34 @@
+#cms {
+  padding: 40px 0 50px;
+}
+
 .full-width-table {
   width: 100%;
 }
 
-.books-table {
-  width: 80%;
-  vertical-align: center;
+table {
+  table-layout: fixed;
+}
+
+th, td {
+  text-align: justify;
+}
+
+.table-content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding: 0 5px 0 5px;
+}
+
+.create-section {
+  text-align: end;
+}
+
+.create-button {
+  border-radius: 300px;
+  font-weight: 600;
+  margin-top: 15px;
+  width: fit-content;
+  margin-bottom: 20px;
 }
