--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -7,7 +7,7 @@
         </div>
       </mat-card-header>
       <mat-card-content>
-        <form [formGroup]="form" class="register-form" (ngSubmit)="onSubmit()">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <div class="row register-content">
             <div class="col-md-6 my-auto text-center">
               <!-- username -->
