--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -2,7 +2,11 @@
   padding: 95px 0 50px;
 }
 
-.container.section-heading {
+.main-page {
+  padding: 0 100px 0 100px;
+}
+
+.section-heading {
   margin-top: 0;
   text-transform: uppercase;
   text-align: center;
@@ -18,12 +22,14 @@ hr.primary {
   border-radius: 300px;
   font-weight: 600;
   width: 20%;
+  min-width: fit-content;
 }
 
 .join-button {
   border-radius: 300px;
   font-weight: 600;
   width: 20%;
+  min-width: fit-content;
   margin-top: 15px;
 }
 
@@ -47,4 +53,8 @@ hr.primary {
   background-size: cover;
   position: relative;
   color: white;
+}
+
+.join-section {
+  padding-top: 30px;
 }
