--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <div id="cms">
-  <div class="container">
+  <div class="main-page">
     <div class="row image-add">
       <div class="col-md-12 text-center align-self-center">
         <h1 class="section-heading text-center"><b>BOOKCROSSING</b></h1>
@@ -10,14 +10,7 @@
         <button mat-raised-button color="accent" routerLink="/about" class="more-button"> FIND OUT MORE </button>
       </div>
     </div>
-    <div class="row content">
-      <div class="col-md-12">
-        <h1 class="section-heading text-center"> Recently added books </h1>
-        <hr class="primary">
-        //tu beda ksionszki
-      </div>
-    </div>
-    <div class="row content">
+    <div class="row content join-section">
       <div class="col-md-12">
         <h1 class="section-heading text-center"> Don't have account yet? <strong routerLink="/account/register">Join us now! </strong></h1>
         <hr class="primary">
