--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -32,7 +32,7 @@
               </div>
             </form>
           </div>
-          <div class="col-md-6 register-section">
+          <div class="col-md-6 text-center">
             <h1 class="section-heading text-center">Register new Account</h1>
             <hr class="primary">
             <div class="register-content">
