--- a/src/app/books/books-list/books-list.component.css
+++ b/src/app/books/books-list/books-list.component.css
@@ -44,13 +44,32 @@ th, td {
   margin-top: 15px;
   width: fit-content;
   margin-bottom: 20px;
+  outline: none;
 }
 
 .action-button {
   border-radius: 300px;
   width: fit-content;
+  outline: none;
+}
+
+.fav-button{
+  outline: none;
 }
 
 mat-label {
   padding-left: 5px;
+}
+
+tr {
+  outline: none;
+  cursor: pointer;
+}
+
+th {
+  position: sticky;
+  top:0;
+  z-index: 1;
+  background-color: #673ab7;
+  color: #fff;
 }
