--- a/src/app/account/register/register.component.css
+++ b/src/app/account/register/register.component.css
@@ -33,5 +33,5 @@ hr.primary {
 
 .mat-card {
   border-radius: 40px;
-  box-shadow: 8px 8px 8px 0 rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 8px 8px 8px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
